[package]
name = "canaryspy"
version = "0.1.1"
edition = "2021"
authors = ["irishmaestro"]
description = "monitor vpn canary pages from the command line"
license = "MIT OR Apache-2.0"
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
august = "2.4.0"
clap = { version = "4.0.32", features = ["derive"] }
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.14.0"
